--- a/Medicaid_Rx.ipynb
+++ b/Medicaid_Rx.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPupZNfrAmAt83fWjmrFPmC",
+      "authorship_tag": "ABX9TyMFU91HC2t42bzwDUvIZ3Vy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2852,7 +2852,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Checking against https://www.kff.org/statedata/medicaid-pharmacy-benefits-state-fact-sheets/, data for Virginia looks inconsistent. They report \\$1 Billion for 2018, but we have almost $4 Billion for 2020. CONCLUSION: SOMEHOW DATA FOR VIRGINIA IS INCONSISTENT. Other states statistics look more consistent.**"
+        "# **Checking against https://www.kff.org/statedata/medicaid-pharmacy-benefits-state-fact-sheets/, data for Virginia looks inconsistent. They report \\$1 Billion for 2018, but we have almost $4 Billion for 2020. CONCLUSION: DISREGARD VIRGINIA DATA. Other states statistics look more consistent.**"
       ],
       "metadata": {
         "id": "Pzwmb4JVK_3i"
